# prompt-lora-trainer

./: .gitignore  AGENTS.md  CLAUDE.md  COMFYUI_INTEGRATION_GUIDE.md  IMPLEMENTATION_PLAN.md  Modelfile  Modelfile.deforum-v3  Modelfile.deforum-v4  Modelfile.deforum-v5  Modelfile.deforum-v6  Modelfile.deforum-v7  Modelfile.qwen3-prompt-lora  README.md  convert_and_upload.sh  implementation-summary.md  plan.md  pull-4.md  pyproject.toml  qwen3-4b-deforum-prompt-lora.md  ready-full-run.md  run-full-build-synthesis.md  setup_env.sh  tidy-yawning-orbit.md
configs/: dataset_config.yaml  sft_qwen3_4b.yaml  sft_qwen3_4b_deforum.yaml  sft_qwen3_4b_deforum_v2_final.yaml  sft_qwen3_4b_deforum_v3.yaml  sft_qwen3_4b_deforum_v4.yaml  sft_qwen3_4b_deforum_v5.yaml  sft_qwen3_4b_deforum_v6.yaml  sft_qwen3_4b_deforum_v7.yaml
data/: deforum_test_prompts.md  processing_report.txt  review_samples.json
inputs/: The_Deforum_Art_Film_Story.txt  The_Deforum_Art_Film_Storyboard(Conflicted copy 2024-01-15 from cyber-nomad).txt  The_Deforum_Art_Film_Storyboard.txt  The_Deforum_Art_Film_Storyboard_Update.txt
scripts/: build_dataset_v3.py  build_dataset_v3_extraction.py  build_dataset_v4.py  build_dataset_v5.py  build_dataset_v6.py  build_dataset_v7.py  merge_and_convert_gguf.py  process_deforum_data.py  reformat_dataset_v2.py  train_sft.py  train_unsloth.py  upload_dataset_to_hub.py  validate_dataset.py
